# poligons-3d-engine-with-docs

./: CMakeLists.txt  LICENSE  README.md
docs/: content.txt  Модуль 1. Основной класс движка.md  Модуль 2. Примитивы.md  Модуль 3. Матрицы и матрица проекции.md  Модуль 4. Проецировние и рендер.md
include/: Config.hpp  Engine.hpp
include/components/: Camera.hpp
include/components/geometry/: Mesh.hpp  Triangle.hpp
include/components/lightning/: Light.hpp
include/components/props/: Color.hpp
include/math/: Mat4x4.hpp  Vec2d.hpp  Vec3d.hpp
include/rendering/: DepthBuffer.hpp  Render.hpp
src/: Engine.cpp  Main.cpp
src/components/: Camera.cpp
src/components/geometry/: Mesh.cpp  Triangle.cpp
src/components/lightning/: Light.cpp
src/components/props/: Color.cpp
src/math/: Mat4x4.cpp  Vec2d.cpp  Vec3d.cpp
src/rendering/: DepthBuffer.cpp  Render.cpp
